DBTOOLS-1632 added statements.ch, statements.ms javadocs